*SVN*

* Add some performance enhancements to ActionView.

  * Cache base_paths in @@cached_base_paths
  * Cache template extensions in @@cached_template_extension
  * Remove unnecessary rescues

* Assume that rendered partials go by the HTML format by default

  def my_partial
    render :update do |page|
      # in this order
      # _foo.html.erb
      # _foo.erb
      # _foo.rhtml
      page.replace :foo, :partial => 'foo'
    end
  end

* Added record identifications to FormHelper#form_for and PrototypeHelper#remote_form_for [DHH]. Examples:

    <% form_for(@post) do |f| %>
      ...
    <% end %>
  
  This will expand to be the same as:
  
    <% form_for :post, @post, :url => post_path(@post), :html => { :method => :put, :class => "edit_post", :id => "edit_post_45" } do |f| %>
      ...
    <% end %>
  
  And for new records:
  
    <% form_for(Post.new) do |f| %>
      ...
    <% end %>
  
  This will expand to be the same as:
  
    <% form_for :post, @post, :url => posts_path, :html => { :class => "new_post", :id => "new_post" } do |f| %>
      ...
    <% end %>

* Rationalize route path escaping according to RFC 2396 section 3.3.  #7544, #8307. [Jeremy Kemper, chrisroos, begemot, jugend]

* Added record identification with polymorphic routes for ActionController::Base#url_for and ActionView::Base#url_for [DHH]. Examples:

    redirect_to(post)         # => redirect_to(posts_url(post))         => Location: http://example.com/posts/1
    link_to(post.title, post) # => link_to(post.title, posts_url(post)) => <a href="/posts/1">Hello world</a>

  Any method that calls url_for on its parameters will automatically benefit from this. 

* Removed deprecated parameters_for_method_reference concept (legacy from before named routes) [DHH]

* Add ActionController::Routing::Helpers, a module to contain common URL helpers such as polymorphic_url. [Nicholas Seckar]
